--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: agendamento-transferencia
   datasource:
     url: jdbc:h2:mem:db_agendamento
     driver-class-name: org.h2.Driver
